# loan-approval-prediction

./: .flake8  .gitignore  README.md  pyproject.toml
api/: server.py
api/dto/: loan.py
api/routers/: index.py  loan.py
api/service/: loan.py
api/templates/: dashboard.html  home.html
app/: server.py
app/routers/: index.py  loan.py
app/service/: loan.py
config/: preprocessing.yaml
config/data/: dataset.yaml
config/models/: lightgbm.yaml
config/store/: features.yaml
experiment/: preprocessing.py  train.py
experiment/data/: dataset.py
experiment/model/: base.py  gbdt.py
experiment/models/: base.py
experiment/store/: features.py
notebook/: eda.py
outputs/2024-10-19/12-41-46/.hydra/: hydra.yaml
outputs/2024-10-19/12-42-33/.hydra/: hydra.yaml
src/data/: dataset.py
src/model/: __init__.py
src/utils/: evaluate.py
