[project]
name = "loan-approval-prediction"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ds-wook", email = "leewook94@gmail.com" }
]
dependencies = [
    "catboost>=1.2.7",
    "lightgbm>=4.5.0",
    "xgboost>=2.1.1",
    "scikit-learn>=1.5.2",
    "pandas>=2.2.3",
    "polars>=1.9.0",
    "fastparquet>=2024.5.0",
    "pyarrow>=17.0.0",
    "hydra-core>=1.3.2",
    "prettytable>=3.11.0",
    "uvicorn[standard]>=0.31.1",
    "fastapi>=0.115.0",
    "jinja2>=3.1.3",
    "websockets>=13.1",
    "requests>=2.28.1",
    "httpx>=0.27.2",
    "ipykernel>=6.29.5",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/loan_approval_prediction"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38']
exclude = '''
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | ^.*\b(migrations)\b.*$
'''